--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -17,8 +17,8 @@
 	 ********************** -->
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="static/scripts/1-hbnb.js", {{ cache_id }}></script>
+   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   <script type="text/javascript" src="{{ url_for('static', filename='scripts/1-hbnb.js') }}?{{cache_id}}"></script> 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/4-common.css') }}?{{ cache_id }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}?{{ cache_id }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css') }}?{{ cache_id }}">
@@ -76,7 +76,7 @@
 	    <h4>&nbsp;</h4>
 	    <ul class="popover">
 	      {% for amenity in amens|sort(attribute='name') %}
-	      <LI>{{ amenity.name }} <input type="checkbox" data-id=":amenity_id" data-name=":amenity_name"> </LI>
+	      <LI>{{ amenity.name }}<input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ ameity.name }}"> </LI>
 	      {% endfor %}
 	    </ul>
 	  </div>
