--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -73,10 +73,10 @@
 
 	  <div class="amenities">
 	    <h3>Amenities</h3>
-	    <h4>&nbsp;</h4>
+	    <h4 style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;">&nbsp;</h4>
 	    <ul class="popover">
 	      {% for amenity in amens|sort(attribute='name') %}
-	      <LI><input type="checkbox" data-id=":amenity_id" data-name="{{ amenity.name }}">{{ amenity.name }}</LI>
+	      <LI><input type="checkbox" data-id="{{amenity.id}}" data-name="{{amenity.name }}">{{ amenity.name }}</input></LI>
 	      {% endfor %}
 	    </ul>
 	  </div>
