--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -11,4 +11,20 @@ header {
 	height: 70px;
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+#api_status {
+    width: 40px;
+    background-color: #cccccc;
+    border-radius: 50%;
+    height: 40px;
+    border: 1px solid #000;
+    margin-right: 30px;
+}
+
+.available {
+    background-color: #ff545f;
 }
